Fix info content wrapping

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ button {
     background-color: #6d747d;
     color: #ffffff;
     width: 450px;
-    height: 180px;
+    height: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
